Fixed up some page list item spacing.

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -437,7 +437,7 @@ section.page {
 		 * Main body lists.
 		 */
 		& > #mw-content-text > ul, & > #mw-content-text > ol {
-			line-height: 0.8em;
+			line-height: 1.2em;
 			padding: 0 0 0 30px;
 			margin: 16px 0;
 
